@@ -4,3 +4,7 @@
 FARO_REQUESTS_TIMEOUT=150
 # Bytes per character used in PDF mixed documents (text and images) to force OCRing the document (default: 150 bytes/char)
 FARO_PDF_OCR_RATIO=200
+# Faro Logging level (default: INFO)
+FARO_LOG_LEVEL=DEBUG
+# Faro Logging file (default: None). Inside output folder to ensure persistence in host machine
+FARO_LOG_FILE=output/faro.log
